# app/Models/Trx/Pesanan.php
@@ -8,10 +8,20 @@ class Pesanan extends Model
 {
     protected $table = 'Trx.pesanan';
     protected $primaryKey = 'pesanan_id';
+    public $timestamps = false;
 
     protected $casts = [
         'pesanan_id' => 'string',
         'user_id' => 'string',
+    ];
+
+    protected $fillable = [
+        'user_id',
+        'tgl_pesanan',
+        'kode_voucher',
+        'tgl_pembayaran_lunas',
+        'tgl_dibatalkan',
+        'no_pesanan'
     ];
 
     // Relationships
